# polebot_beta

devel/: .catkin  .rosinstall  setup.sh
devel/include/open_base/: FrameToFrameRequest.h  FrameToFrameResponse.h  KinematicsForwardRequest.h  KinematicsForwardResponse.h  KinematicsInverseRequest.h  KinematicsInverseResponse.h  Movement.h  MovementBezier.h  MovementGeneric.h  Velocity.h
devel/lib/open_base/: forward_kinematik.py  open_base_kinematics  open_base_main  open_base_odometry
devel/lib/pkgconfig/: open_base.pc  polebot1.pc  rosserial_arduino.pc  rosserial_chibios.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc
devel/lib/polebot1/: circle.py  forward_kinematik.py  input.py  invers_Kinematik.py  pub.py  sub.py
devel/lib/rosserial_arduino/: make_libraries.py  serial_node.py
devel/lib/rosserial_client/: make_libraries
install/: .rosinstall  local_setup.sh
src/open_base/: CMakeLists.txt  typescript
src/open_base/script/: circle.py  (+1 more)
src/polebot1/: CMakeLists.txt  typescript
src/polebot1/Pol_Gazebo_screen/: CMakeLists.txt  package.xml
src/polebot1/Pol_Gazebo_screen/config/: joint_names_Pol_Gazebo_screen.yaml
src/polebot1/Pol_Gazebo_screen/launch/: display.launch  gazebo.launch
src/polebot1/Pol_Gazebo_screen/meshes/: M1.STL  M2.STL  M3.STL  base_link.STL
src/polebot1/Pol_Gazebo_screen/urdf/: Pol_Gazebo_screen.csv  Pol_Gazebo_screen.urdf
(+102 files in other folders)
